Settings now shows true status of device, sim mode works handles url input

--- a/Janksy/Janksy/Base.lproj/Main.storyboard
+++ b/Janksy/Janksy/Base.lproj/Main.storyboard
@@ -203,6 +203,9 @@
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3PI-VD-LPS">
                                                     <rect key="frame" x="254" y="25" width="51" height="31"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="simulationSwitchAction:" destination="DWA-bh-aO4" eventType="valueChanged" id="ORV-aR-IrT"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                         </tableViewCellContentView>
