--- a/Janksy/Janksy/Base.lproj/Main.storyboard
+++ b/Janksy/Janksy/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="Jdn-d4-G5u"/>
-                        <barButtonItem title="Cancel" id="VVZ-RK-W5k">
+                        <barButtonItem enabled="NO" title="Cancel" id="VVZ-RK-W5k">
                             <connections>
                                 <action selector="cancelButtonAction:" destination="pGg-6v-bdr" id="YIJ-7H-FqM"/>
                             </connections>
@@ -127,24 +127,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lei-5M-9Gs">
-                                <rect key="frame" x="20" y="276" width="280" height="17"/>
+                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lei-5M-9Gs">
+                                <rect key="frame" x="40" y="114" width="260" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" size="system"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mcs-u5-1t8">
+                                <rect key="frame" x="20" y="85" width="48" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last scanned:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sEh-2b-HjK">
+                                <rect key="frame" x="20" y="143" width="111" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last scanned date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vy6-i9-QC4">
+                                <rect key="frame" x="40" y="172" width="260" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan count:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNS-lA-rMS">
+                                <rect key="frame" x="20" y="201" width="95" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan count" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFa-6n-SXe">
+                                <rect key="frame" x="40" y="230" width="260" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" symbolic="YES" id="62x-JV-TTJ"/>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="centerY" secondItem="MMQ-IT-qOo" secondAttribute="centerY" id="JzS-HC-Rnl"/>
-                            <constraint firstAttribute="trailing" secondItem="Lei-5M-9Gs" secondAttribute="trailing" constant="20" symbolic="YES" id="pXB-RP-Zz6"/>
+                            <constraint firstItem="vFa-6n-SXe" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="40" id="0Us-8g-R4R"/>
+                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="top" secondItem="mcs-u5-1t8" secondAttribute="bottom" constant="8" id="2Cf-qd-Kk8"/>
+                            <constraint firstAttribute="trailing" secondItem="vFa-6n-SXe" secondAttribute="trailing" constant="20" id="6m4-Jk-46S"/>
+                            <constraint firstItem="Vy6-i9-QC4" firstAttribute="top" secondItem="sEh-2b-HjK" secondAttribute="bottom" constant="8" id="9Ca-dW-p1d"/>
+                            <constraint firstItem="Vy6-i9-QC4" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="40" id="9er-bs-QcY"/>
+                            <constraint firstItem="mcs-u5-1t8" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" id="BWB-wO-hA7"/>
+                            <constraint firstItem="sEh-2b-HjK" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" id="P0T-Fi-Cfi"/>
+                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="40" id="Y0l-hV-YdA"/>
+                            <constraint firstAttribute="trailing" secondItem="Lei-5M-9Gs" secondAttribute="trailing" constant="20" id="arG-jp-MbH"/>
+                            <constraint firstItem="sEh-2b-HjK" firstAttribute="top" secondItem="Lei-5M-9Gs" secondAttribute="bottom" constant="8" id="lnq-0e-UDV"/>
+                            <constraint firstItem="mcs-u5-1t8" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" constant="21" id="mPS-9w-D2o"/>
+                            <constraint firstItem="vFa-6n-SXe" firstAttribute="top" secondItem="rNS-lA-rMS" secondAttribute="bottom" constant="8" id="t0Z-oT-PfA"/>
+                            <constraint firstAttribute="trailing" secondItem="Vy6-i9-QC4" secondAttribute="trailing" constant="20" id="uou-Km-HD8"/>
+                            <constraint firstItem="rNS-lA-rMS" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" id="x6U-Zl-T7D"/>
+                            <constraint firstItem="rNS-lA-rMS" firstAttribute="top" secondItem="Vy6-i9-QC4" secondAttribute="bottom" constant="8" id="xBd-Ee-lsf"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="cra-N8-TIN"/>
                     <connections>
+                        <outlet property="detailCountLabel" destination="vFa-6n-SXe" id="AZP-69-5wb"/>
+                        <outlet property="detailDateLabel" destination="Vy6-i9-QC4" id="XfG-pU-zvW"/>
                         <outlet property="detailDescriptionLabel" destination="Lei-5M-9Gs" id="sCT-F7-F6f"/>
                     </connections>
                 </viewController>
