--- a/Janksy/Janksy/Base.lproj/Main.storyboard
+++ b/Janksy/Janksy/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
@@ -107,7 +107,41 @@
                     <view key="view" contentMode="scaleToFill" id="MnK-n7-GWs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07A-uz-WXd">
+                                <rect key="frame" x="20" y="143" width="280" height="381"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <string key="text">To buy hardware and software visit:
+
+https://store.neocodesoftware.com/products/RFID.html
+
+For support email:
+support@neocodesoftware.com
+
+</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NeoCodeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="FGT-Kj-8ux">
+                                <rect key="frame" x="20" y="84" width="280" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="DnW-yD-hUu"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lQI-Z9-4IG" firstAttribute="top" secondItem="07A-uz-WXd" secondAttribute="bottom" id="Q75-Bn-0WN"/>
+                            <constraint firstItem="FGT-Kj-8ux" firstAttribute="leading" secondItem="MnK-n7-GWs" secondAttribute="leading" constant="20" id="YFQ-d0-dBa"/>
+                            <constraint firstItem="07A-uz-WXd" firstAttribute="top" secondItem="FGT-Kj-8ux" secondAttribute="bottom" constant="8" id="gOq-3b-dFv"/>
+                            <constraint firstAttribute="trailing" secondItem="FGT-Kj-8ux" secondAttribute="trailing" constant="20" id="gaw-UD-qbv"/>
+                            <constraint firstItem="FGT-Kj-8ux" firstAttribute="leading" secondItem="07A-uz-WXd" secondAttribute="leading" id="iAp-1b-SEU"/>
+                            <constraint firstItem="FGT-Kj-8ux" firstAttribute="top" secondItem="WJm-Sg-2Hf" secondAttribute="bottom" constant="20" id="ouc-5c-Xij"/>
+                            <constraint firstAttribute="trailing" secondItem="07A-uz-WXd" secondAttribute="trailing" constant="20" id="yMZ-d7-RGE"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Help" id="xg9-wd-YCg"/>
                 </viewController>
@@ -274,6 +308,9 @@
             <point key="canvasLocation" x="997" y="766"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NeoCodeLogo" width="1100" height="100"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
